--- a/public_html/Styles/FishBodyReader.css
+++ b/public_html/Styles/FishBodyReader.css
@@ -1,3 +1,8 @@
+/* 
+ * Description:
+ *
+ * Status:
+ */
 #templateElementIDStyle
 {
     /*Size & Position*/
@@ -7,6 +12,11 @@
     /*Font*/    
 }
 
+/* 
+ * Description:
+ *
+ * Status:
+ */
 .templateClassStyle
 {
     /*Size & Position*/
