--- a/public_html/Styles/FluidSphere.css
+++ b/public_html/Styles/FluidSphere.css
@@ -706,7 +706,6 @@
     height: 68%;
     width: 70%;
     /*Colors & Effects*/
-
 }
 
 /* 
@@ -714,8 +713,34 @@
  *
  * Status:
  */
-#instructionsBlock
+#instructionBlock
 {
     /*Size & Position*/
     position: fixed;
+    width: 100%;
+    height: 79%;
+    left: 150%;
+    top: 18%;
+    z-index: 2;
+    opacity: 0.96;
+    /*Colors & Effects*/
+    background: lightblue;
+    transition: 0.8s;
+    border-bottom-left-radius: 2em;
+    box-shadow:7px -7px 10px gray;
+}
+
+/* 
+ * Description:
+ *
+ * Status:
+ */
+#fluidSphereInstructions
+{
+    /*Size & Position*/
+    position: absolute;
+    left: 8%;
+    top: 15%;
+    height: 70%;
+    width: 60%;
 }
